# Tiwi-Beeldverwerking2013-2014

./: .gitignore  README.md  prepResults.pl
backup/: opgave11.cpp  opgave3.cpp  opgave4.cpp  opgave5.cpp
opgave1/: Andreas_DeLille_opgave1.cpp  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
opgave10/: code.cpp
opgave2/: CMakeCache.txt  code.cpp  gmon.out
opgave3/: CMakeLists.txt  Makefile  code.cpp  gmon.out
opgave4/: code.cpp
opgave5/: code.cpp  gmon.out
opgave6/: code.cpp  gmon.out
opgave7/: cmake_install.cmake  code.cpp  gmon.out
opgave8/: code.cpp  gmon.out
opgave9/: code.cpp
oplossingen/: opgave10.cpp  opgave12.cpp  opgave13.cpp  opgave5.cpp  opgave6.cpp  opgave8.cpp  opgave9.cpp  prepResults.pl
template/: code.cpp
